# TempFiles

./: .editorconfig  .env  .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  config.toml  index.js  schema.sql  test.html
.github/workflows/: build.yml
.sqlx/: query-142239b69f6b583536792c29f871587a3f4043b217c03f304ce2dc0da0fba808.json  query-defe6e4d90b794d2e6332290d71d822dfaaa0b422ec0958f3213b49b95df1041.json
migrations/: 20250826223402_initial-schema.down.sql
src/: api_error.rs  app_db.rs  app_html.rs  config.rs  main.rs  prf_seed.rs  prune.rs  schema.sql  serve.rs  session.rs
src/routes/: mod.rs
src/routes/api/: files.rs  login.rs  mod.rs  register.rs
www/: .gitignore  Base64.ts  FileCrypto.ts  FileUpload.ts  PendingFile.ts  Session.ts  app.css  app.html  app.tsx  base64_decode.ts  base64_encode.ts  decode_urlsafe_base64.ts  package.json  tsconfig.json  vite.config.ts
www/api/: APICall.ts  register.ts
www/api/files/: File.ts  delete.ts  delete_all.ts  download.ts  list.ts  upload.ts
www/api/login/: finish.ts  start.ts
www/api/register/: finish.ts  start.ts
www/components/: FilePicker.tsx  FilesList.tsx  FilesListRow.tsx  NewFilesList.tsx  NewFilesListRow.tsx  PendingFilesList.tsx  PendingFilesListRow.tsx
www/pages/: index.tsx  login.tsx  register.tsx
