[package]
name = "tempfiles"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
url = "2.5.7"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
rocket = { version = "0.5.1", features = ["secrets"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
uuid = { version = "1.18.0", features = ["v4"] }
rand = "0.9.2"
base64 = "0.22.1"
tokio = "1.47.1"
