[package]
name = "tempfiles"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json", "uuid"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
rand = "0.9.2"
base64 = "0.22.1"
tokio = "1.47.1"
ts-rs = { version = "11.0.1", features = ["no-serde-warnings", "uuid-impl"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_macros", "sqlx_sqlite"] }
anyhow = "1.0.99"
sqlx = { version = "^0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid", "chrono"] }
dotenv = "0.15.0"
webauthn-rs = { version = "0.5.2", features = ["conditional-ui"] }
serde_json = "1.0.143"
bs58 = "0.5.1"
